:bug: Fixed more bugs
- Searchbar had unwanted padding
- InputField height calculation made view jump around
- Error in translation file
- hoverFix created overflow on some browsers
- SessionManager was too wide on large screens
- FileStorage now accepts asf files

--- a/client/src/assets/styles/main.styl
+++ b/client/src/assets/styles/main.styl
@@ -310,6 +310,7 @@ input.hiddenInput
             background $archive-green-selected
     > input
         flex 1
+        padding 0
         min-width 5rem
     > :not(:last-child)
         margin-right 0.625rem
